Changed website colors & project description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header>
     <img class="avatar" src="./assets/images/avatar.png" alt="Avatar Image">
-    <h1 class="bigHeading">Rakibul's Portfolio</h1>
+    <h1 class="bigHeading">Rakibul's Professional Portfolio</h1>
     <nav>
       <ul>
         <li> <a href="#aboutme"><button class="navigation"><strong>About Me</strong></button></a></li>
@@ -24,18 +24,18 @@
   </header>
 
 
+  <section id="aboutme">
+    <h3>About Me</h3>
+    <p class="aboutmyself"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+      aliquip ex ea
+      commodo consequat. Duis
+      aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  </section>
 
   <main>
-
-    <section id="aboutme">
-      <h3>About Me</h3>
-      <p class="aboutmyself"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-    </section>
-
-
     <section id="projects">
       <h3>Projects</h3>
       <section class="row">
@@ -43,8 +43,9 @@
         <div class="projectCard">
           <button class="button button1">
             <h2>Horiseon Social Solution Services</h2>
-            <p class="technology">HTML / CSS</p>
-            <a href="https://rakibca.github.io/horiseon.github.io"><img class="img1" src="./assets/images/horiseon.png" width="100px" height="140px" alt="Horiseon Website"></a>
+            <p class="projectDescription">Refactoring Project</p>
+            <a href="https://rakibca.github.io/horiseon.github.io"><img class="img1" src="./assets/images/horiseon.png"
+                width="100px" height="140px" alt="Horiseon Website"></a>
           </button>
         </div>
 
@@ -74,7 +75,8 @@
       <h3>Contact Me</h3>
       <p class="contactinfo"><strong>Phone: 403-484-5757</strong></p>
       <p class="contactinfo"><strong>Email: rakibul@gmail.com</strong></p>
-      <p class="contactinfo"><a href="https://github.com/Rakibca"><button class="navigation"><strong>GitHub Page</strong></button></a>
+      <p class="contactinfo"><a href="https://github.com/Rakibca"><button class="navigation"><strong>GitHub
+              Page</strong></button></a>
     </section>
   </main>
 
