--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
 
   <section id="aboutme">
     <h3>About Me</h3>
-    <p class="aboutmyself"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-      aliquip ex ea
-      commodo consequat. Duis
-      aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+    <p class="aboutmyself">Name: Rakibul Islam</p>
+    <p class="aboutmyself">Professional Title: Full Stack Web Developer</p>
+    <p class="aboutmyself">Location: Calgary, Alberta</p>
+    <p class="aboutmyself">Experienced IT professinal with 10 years experience as a Network Analyst. Currently seeking
+      a Web Developer role.</p>
   </section>
 
   <main>
@@ -40,7 +38,7 @@
       <h3>Projects</h3>
       <section class="row">
 
-        <div class="projectCard">
+        <div>
           <button class="button button1">
             <h2>Horiseon Social Solution Services</h2>
             <p class="projectDescription">Refactoring Project</p>
@@ -48,25 +46,17 @@
                 width="100px" height="140px" alt="Horiseon Website"></a>
           </button>
         </div>
-
-        <div class="projectCard">
+        <div>
           <button class="button button2">Coming Soon</button>
         </div>
-
-        <div class="projectCard">
+        <div>
           <button class="button button3">Coming Soon</button>
         </div>
-
-        <div class="projectCard">
+        <div>
           <button class="button button4">Coming Soon</button>
         </div>
-
-        <div class="projectCard">
+        <div>
           <button class="button button5">Coming Soon</button>
-        </div>
-
-        <div class="projectCard">
-          <button class="button button6">Coming Soon</button>
         </div>
       </section>
     </section>
@@ -81,7 +71,7 @@
   </main>
 
   <footer>
-    <p>&copy;2022 Rakibul Inc.</p>
+    <p>&copy;2022 Rakibul Islam Inc.</p>
   </footer>
 
 </body>
