Updated README.md file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <img class="avatar" src="./assets/images/avatar.png" alt="Avatar Image">
+    <img class="avatar" src="./assets/images/avatar.png" alt="Rakibul's avatar image">
     <h1 class="bigHeading">Rakibul's Professional Portfolio</h1>
     <nav>
       <ul>
@@ -43,7 +43,7 @@
             <h2>Horiseon Social Solution Services</h2>
             <p class="projectDescription">Refactoring Project</p>
             <a href="https://rakibca.github.io/horiseon.github.io"><img class="img1" src="./assets/images/horiseon.png"
-                width="100px" height="140px" alt="Horiseon Website"></a>
+                width="100px" height="140px" alt="Screenshot of the Horiseon Website"></a>
           </button>
         </div>
         <div>
