--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rakib's Professional Porfolio</title>
+  <title>Rakibul's Professional Porfolio</title>
   <link rel="stylesheet" href="./assets/css/reset.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
 
+  <!-- Header section which includes the navigation bar -->
   <header>
     <img class="avatar" src="./assets/images/avatar.png" alt="Rakibul's avatar image">
     <h1 class="bigHeading">Rakibul's Professional Portfolio</h1>
@@ -23,7 +24,7 @@
     </nav>
   </header>
 
-
+  <!-- About Me section -->
   <section id="aboutme">
     <h3>About Me</h3>
     <p class="aboutmyself">Name: Rakibul Islam</p>
@@ -33,11 +34,12 @@
       a Web Developer role.</p>
   </section>
 
+  <!-- Main section starts here (includes Contact Me section) -->
   <main>
+    <!-- Individual Projects section (total 5 Projects) -->
     <section id="projects">
       <h3>Projects</h3>
       <section class="row">
-
         <div>
           <button class="button button1">
             <h2>Horiseon Social Solution Services</h2>
@@ -70,6 +72,7 @@
     </section>
   </main>
 
+  <!-- Footer section -->
   <footer>
     <p>&copy;2022 Rakibul Islam Inc.</p>
   </footer>
